--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,24 +14,26 @@ body {
 header {
     padding: 20px 35px;
     background-color: #39a6b2;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
   }
 header h1 {
     font-weight: bold;
     font-size: 36px;
     color: #fce138
-    margin;
-}
+    margin 0;
+  }
 header a {
   text-decoration: none;
   color: #fce138
 }
 header nav {
-  float: right;
-  margin: 7px 0;
+  margin: 7px o;
 }
 header nav ul li {
-  display: inline
-}
+  display: flex
+ }
 
 header nav ul li a {
   margin: 0 30px;
