--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,10 +119,8 @@ margin: 0 5px;
   font-size: 16px;
 }
  /*HERO STYLES END */
- .intro {
-   text-align: center;
- }
  .intro p {
+   text-align: center;
    line-height: 1.7;
    color: #39a6b2;
    width: 80%;
@@ -130,17 +128,17 @@ margin: 0 5px;
    margin: 0 auto;
  }
  .steps{
-   text-align: center;
    background: #fce138;
  }
 
 .section-title {
   font-size: 55px;
   color: #024e76;
-  margin-bottom: 35px;
-  padding: 0 100px 20px 100px;
-  display: inline-block;
   border-bottom: 3px solid;
+  padding-bottom: 20px;
+  text-align: center;
+  margin: 0 auto 35px auto;
+  width: 50%;
 }
 .primary-border {
   border-color: #fce138;
@@ -168,7 +166,6 @@ margin-top: 10px;
   font-size: 39px;
 }
 .trainers {
-  text-align: center;
 }
 .trainer { 
   width: 900px;
@@ -208,7 +205,6 @@ margin-top: 10px;
 }
 /* REACH OUT STYLES START*/
 .contact {
-  text-align: center;
   background: #024e76;
 }
 .contact H2 {
@@ -252,4 +248,7 @@ margin-top: 10px;
   font-style: italic;
   font-size: 55px;
   color: #fce138;
+}
+.flex-row {
+  display: flex;
 }
