--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,13 +18,14 @@ header {
     justify-content: space-between;
     flex-wrap: wrap;
   }
-header h1 {
+  header h1 {
     font-weight: bold;
     font-size: 36px;
-    color: #fce138
-    margin 0;
+    color: #fce138;
+    margin: 0;
+    display: inline;
   }
-header a {
+  header a {
   text-decoration: none;
   color: #fce138
 }
@@ -44,14 +45,6 @@ header nav ul li a {
   font-weight: lighter;
   font-size: 1.55vw;
 }
-header h1 {
-  font-weight: bold;
-  font-size: 36px;
-  color: #fce138;
-  margin: 0;
-  display: inline;
-}
-
 footer {
   display: flex;
   justify-content: space-between;
@@ -146,26 +139,24 @@ margin: 0 5px;
 .secondary-border {
   border-color: #39a6b2;
 }
-.steps div {
-  margin-bottom: 80px;
+.step {
+  margin: 50px auto;
+  padding-bottom: 50px;
+  width: 80%;
+  border-bottom: 1px solid #39a6b2;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
 }
-.steps img {
-  width:15%;
-  margin: 10px 0;
-}
-.steps h3 {
+.step h3 {
 color: #024e76;
 font-size: 46px;
-margin-top: 10px;
+flex: 1 30%;
 }
-.steps p {
-  color: #39a6b2;
-  font-size: 23px;
-}
-.steps span {
-  font-size: 39px;
-}
-.trainers {
+ .step-text p {
+  color:#39a6b2;
+  font-size: 18px;
 }
 .trainer { 
   width: 900px;
@@ -251,4 +242,25 @@ margin-top: 10px;
 }
 .flex-row {
   display: flex;
+}
+.step-text h4 {
+  font-size: 26px;
+  line-height: 1.5;
+  color: #024e76;
+}
+.step-info {
+  flex: 2 70%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+.step img {
+  flex: 1 12%;
+  margin-right: 20px;
+}
+.step-text { 
+  flex: 12;
+}
+.step-img img {
+  max-width: 100%;
 }
