--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
   padding: 0;
   
 }
+:root {
+  --primary-color:#fce138;
+  --secondary-color: #023e76;
+  --tertiary-color:#39a6b2;
+}
 body {
     /* more on this crazy alphanumerical value in a minute! */
     background-image: url("../images/hero-bg.jpg"); alt: "background image";
@@ -25,13 +30,14 @@ header {
   padding: 20px 35px;
   position: sticky;
   top: 0;
+  z-index: 9999;
   }
   header h1 {
     text-shadow: 0 0 10px rgba(0,0,0,0.5);
     font-weight: bold;
     font-size: 36px;
     color: #fce138;
-    display: inline;
+    margin: 0;
   }
   header a {
   text-decoration: none;
@@ -40,7 +46,7 @@ header {
 header nav {
   margin: 7px o;
 }
-header nav ul li {
+header nav ul  {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -60,6 +66,7 @@ header nav ul li a:hover {
   border-radius: 15px;
   text-shadow: none;
 }
+/*footer styles start */
 footer {
   display: flex;
   justify-content: space-between;
@@ -80,14 +87,15 @@ footer div {
 footer a {
   color: #024e76;
 }
+/*End Footer Styles*/
+/*Style all section tags */
 section {
   padding: 60px;
 }
 /* Hero Style Start */
 .hero {
-  background-image: url(assets/images/hero-bg.jpeg);alt: "hero image";
+  background-image: url(assets/images/hero-bg.jpeg);
   background-size: cover;
-  background-position: center;
   background-attachment: fixed;
   background-position: 80%;
   display: flex;
@@ -95,13 +103,27 @@ section {
   flex-wrap: wrap;
   align-items: flex-start;
    }
-/* Hero Style End */
+   .hero-cta { 
+    width: 35%;
+    text-align: right;
+    margin: 3.5%;
+    color: #fff;
+    font-size: 18px;
+    line-height: 1.2;
+  }
+  .hero-cta h2 {
+    font-style: italic;
+    font-size: 55px;
+    color: #fce138;
+    text-shadow: 0 0 10px rgba(0,0,0,0.5);
+  }
+
 .hero-form {
   border-radius: 15px;
   box-shadow: 0 0 10px rgba(0,0,0,0.5);
-  width: 450px;
+  width: 40%;
   margin: 3.5%;
-  background-color: #fce138 (rgba 252, 225, 56, 0.8);
+  background-color: (rgba 252, 225, 56, 0.8);
   padding: 20px;
   color: #024e76;
   border: solid 3px #024e76;
@@ -124,6 +146,10 @@ section {
   margin-bottom: 15px;
   background-color: rgba(255,255,255, 0.75);
 }
+.form-input:focus {
+  background-color:rgba(255,255,255, 1);
+  outline: none;
+  }
 
 .hero-form label {
 margin: 0 5px;
@@ -139,34 +165,67 @@ margin: 0 5px;
 .hero-form button:hover {
   background-color: #39a6b2
 }
-.hero-cta { 
-  width: 35%;
-  text-align: right;
-  margin: 3.5%;
-  color: #fff;
-  font-size: 18px;
-  line-height: 1.2;
-}
-.hero-cta h2 {
-  font-style: italic;
-  font-size: 55px;
-  color: #fce138;
-  text-shadow: 0 0 10px rgba(0,0,0,0.5);
-}
- /*HERO STYLES END */
- .intro p {
-   text-align: center;
-   line-height: 1.7;
-   color: #39a6b2;
-   width: 80%;
-   font-size: 20px;
-   margin: 0 auto;
- }
- .steps{
-   background: #fce138;
- }
+/* Pseudo Elements*/
 
-.section-title {
+.checkbox-wrapper input, .radio-wrapper input {
+  opacity: 1;
+}
+.checkbox-wrapper label, .radio-wrapper label {
+  position: relative;
+  left: 10px;
+  margin: 10px;
+  line-height: 1.6;
+}
+.checkbox-wrapper label::before, .radio-wrapper label::before {
+  content: "";
+  height: 20px;
+  width: 20px;
+  background: rgba(255,255,255, 0.75);
+  border: 1px solid #024e76;
+  position: absolute;
+  top: -4px;
+  left: -30px;
+}
+.radio-wrapper label::before {
+  border-radius: 50%;
+}
+.radio-wrapper label::after {
+  content: "";
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #024e76;
+  position: absolute;
+  left: -29px;
+  top: -3px;
+  background-image: radial-gradient(circle,#39a6b2,#024e76);
+}
+.checkbox-wrapper label::after {
+  content: "";
+  width: 6px;
+  height: 14px;
+  border-radius: 50%;
+  background: #024e76;
+  position: absolute;
+  left: -29px;
+  top: -3px;
+}
+  .checkbox-wrapper input + label::after, 
+  .radio-wrapper input+label::after{
+    content:none;}
+    .checkbox-wrapper input:checked+label::after,
+    .radio-wrapper input:checked +label::after{
+      content: "";
+    }
+  
+   .radio-wrapper input:checked+label{
+    font-weight: bold;
+  }
+
+
+ /*HERO STYLES END */
+ /*SECTION TITLE STYLES START*/
+ .section-title {
   font-size: 48px;
   color: #024e76;
   border-bottom: 3px solid;
@@ -181,6 +240,25 @@ margin: 0 5px;
 .secondary-border {
   border-color: #39a6b2;
 }
+/* SECTION TITLE STYLES END*/
+
+/* WHAT WE DO STYLES*/
+ .intro p {
+   text-align: center;
+   line-height: 1.7;
+   color: #39a6b2;
+   width: 80%;
+   font-size: 20px;
+   margin: 0 auto;
+ }
+ /*WHAT WE DO STYLES END*/
+
+ /*WHAT YOU DO STYLES START*/
+ .steps{
+   background: #fce138;
+ }
+
+
 .step {
   margin: 50px auto;
   padding-bottom: 50px;
@@ -200,10 +278,33 @@ color: #024e76;
 font-size: 46px;
 flex: 1 30%;
 }
+.step-text h4 {
+  font-size: 26px;
+  line-height: 1.5;
+  color: #024e76;
+}
+.step-info {
+  flex: 2 70%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+.step img {
+  flex: 1 12%;
+  margin-right: 20px;
+}
+.step-text { 
+  flex: 12;
+}
+.step-img img {
+  max-width: 100%;
+}
  .step-text p {
   color:#39a6b2;
   font-size: 18px;
 }
+/*WHAT YOU DO STYLES END*/
+/* MEET THE TRAINERS START*/
 .trainer { 
   
   margin: 20px;
@@ -243,8 +344,18 @@ flex: 1 30%;
   flex-wrap: wrap;
   justify-content: space-around;
 }
+/*TRAINERS STYLES END*/
 
 /* REACH OUT STYLES START*/
+.contact-info {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.contact-info > * {
+  flex: 1;
+  margin: 15px;
+}
 .contact {
   background: #024e76;
 }
@@ -255,9 +366,7 @@ flex: 1 30%;
  height: 400px;
 }
 .contact-info div{
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+  color: white;
 }
 .contact-info h3 {
   color:#fce138;
@@ -269,38 +378,6 @@ flex: 1 30%;
   font-size: 16px;
   font-style: normal;
 }
-.contact-info a {
-  color: #fce138;
-}
-.contact-info > * {
-  flex: 1;
-  margin: 15px;
-}
-/*REACH OUT STYLES END */
- .flex-row {
-  display: flex;
-}
-.step-text h4 {
-  font-size: 26px;
-  line-height: 1.5;
-  color: #024e76;
-}
-.step-info {
-  flex: 2 70%;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-}
-.step img {
-  flex: 1 12%;
-  margin-right: 20px;
-}
-.step-text { 
-  flex: 12;
-}
-.step-img img {
-  max-width: 100%;
-}
 .contact-form input, .contact-form textarea {
   border-radius: 10px;
   border: 1px solid #024e76;
@@ -311,9 +388,11 @@ flex: 1 30%;
   width: 100%;
   margin-bottom: 15px;
   margin-top: 5px;
-  outline: none;
+  background-color: rgba(255,255,255, 0.75);
 }
-
+.contact-info a {
+  color: #fce138;
+}
 .contact-form button {
   border-radius: 10px;
   width: 100%;
@@ -328,11 +407,28 @@ flex: 1 30%;
    color:#fce138;
    background: #39a6b2;
  }
+
+/*REACH OUT STYLES END */
+/*UTILITIES*/
+.text-left {
+  text-align: left;
+} 
+
+.text-right {
+  text-align: right;
+}
+
+
+.flex-row {
+  display: flex;
+}
+
 /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
 @media screen and (max-width: 980px) {
   header {
     padding-bottom: 0;
     justify-content: center;
+    position: relative;
   }
 
   header h1 {
@@ -381,9 +477,7 @@ flex: 1 30%;
   section {
     padding: 30px 15px;
   }
-  section {
-    padding: 30px 15px;
-  }
+
 
   .step h3 {
     flex: 1 100%;
@@ -406,6 +500,9 @@ flex: 1 30%;
   .step-text {
     flex: 100%;  
   }
+}
+.trainer-bio h3, .trainer-bio h4 {
+  display: block;
 }
 
 /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
@@ -437,8 +534,4 @@ flex: 1 30%;
     order: 3;
   }
 }
-/* create a new rule for focus state*/
- .form-input:focus {
-   background-color:rgba(255,255,255, 1);
-   outline: none;
-   }
+ 
